--- a/HelleNetMaui.csproj
+++ b/HelleNetMaui.csproj
@@ -50,8 +50,12 @@
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="BootstrapBlazor" Version="7.10.1" />
+        <PackageReference Include="BootstrapBlazor.FontAwesome" Version="7.5.0" />
         <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
         <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+        <PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.6" />
     </ItemGroup>
+
 
 </Project>
